--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0%' stop-color='%23007cfb'/%3E%3Cstop offset='100%' stop-color='%23ff9100'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M2 19V5a2 2 0 0 1 2-2h7' stroke='url(%23g)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M22 19V5a2 2 0 0 0-2-2h-7' stroke='url(%23g)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M2 17a2 2 0 0 1 2-2c2.5 0 6 1 8 1s5.5-1 8-1a2 2 0 0 1 2 2' stroke='url(%23g)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CivicEd Kenya - Empowering Young Kenyans Through Civic Education</title>
     <meta name="description" content="AI-Powered Civic Education Platform for Kenya. Learn about the Constitution, devolution, and civic participation through personalized, gamified education tailored to your county and curriculum.">
